--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,16 @@
+# Editor configuration, see http://editorconfig.org
+
+# 表示是最頂層的 EditorConfig 配置文件
 root = true
 
-[*]
-indent_style = space
-indent_size = 2
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
+[*] # 表示所有文件適用
+charset = utf-8 # 設置文件字符集爲 utf-8
+indent_style = space # 縮進風格（tab | space）
+indent_size = 2 # 縮進大小
+end_of_line = lf # 控制換行類型(lf | cr | crlf)
+trim_trailing_whitespace = true # 去除行首的任意空白字符
+insert_final_newline = true # 始終在文件末尾插入一個新行
 
-[*.md]
+[*.md] # 表示僅 md 文件適用以下規則
+max_line_length = off
 trim_trailing_whitespace = false
