--- a/package.json
+++ b/package.json
@@ -229,7 +229,6 @@
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^5.0.0",
     "opencollective-postinstall": "^2.0.3",
     "prettier": "^2.0.5",
     "react-refresh": "^0.9.0",
@@ -248,14 +247,18 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
+    "dart-sass": "^1.25.0",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
+    "howler": "^2.2.1",
+    "music-metadata-browser": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
+    "sass": "^1.35.1",
     "source-map-support": "^0.5.19"
   },
   "devEngines": {
