--- a/package.json
+++ b/package.json
@@ -253,9 +253,11 @@
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
     "howler": "^2.2.1",
+    "hox": "^1.1.4",
     "music-metadata-browser": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-howler": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
     "sass": "^1.35.1",
