--- a/package.json
+++ b/package.json
@@ -247,6 +247,10 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.0",
+    "@material-ui/icons": "^5.0.0-beta.0",
     "dart-sass": "^1.25.0",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
