--- a/package.json
+++ b/package.json
@@ -254,6 +254,7 @@
     "dart-sass": "^1.25.0",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
+    "electron-store": "^8.0.0",
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
     "howler": "^2.2.1",
