--- a/package.json
+++ b/package.json
@@ -251,6 +251,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.0",
     "@material-ui/icons": "^5.0.0-beta.0",
+    "ahooks": "^2.10.7",
     "dart-sass": "^1.25.0",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
