--- a/package.json
+++ b/package.json
@@ -249,6 +249,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@foobar404/wave": "^1.2.7",
     "@material-ui/core": "^5.0.0-beta.0",
     "@material-ui/icons": "^5.0.0-beta.0",
     "ahooks": "^2.10.7",
