--- a/package.json
+++ b/package.json
@@ -257,6 +257,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-howler": "^5.1.0",
+    "react-palette": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
     "sass": "^1.35.1",
